crates/rils_capi/csharp/Rils.CSharp/Generated/NativeMethods.g.cs

// <auto-generated />
#nullable enable
using System;
using System.Runtime.InteropServices;

namespace Rils.CSharp
{

public enum RilsStatus : int
{
    Ok = 0,
    InvalidArgument = 1,
    InvalidHandle = 2,
    CompileError = 3,
    ExecutionError = 4,
    UnsupportedValue = 5,
    BytecodeError = 6,
    Panic = 255,
}

public enum RilsValueTag : uint
{
    Unit = 0,
    Bool = 1,
    I8 = 2,
    I16 = 3,
    I32 = 4,
    I64 = 5,
    I128 = 6,
    Isize = 7,
    U8 = 8,
    U16 = 9,
    U32 = 10,
    U64 = 11,
    U128 = 12,
    Usize = 13,
    F32 = 14,
    F64 = 15,
    Char = 16,
}

[StructLayout(LayoutKind.Sequential)]
internal unsafe struct NativeSlice
{
    internal byte* Data;
    internal UIntPtr Length;
}

[StructLayout(LayoutKind.Sequential)]
internal struct NativeValue
{
    internal RilsValueTag Tag;
    internal uint Reserved;
    internal ulong Low;
    internal ulong High;
}

internal static unsafe class NativeMethods
{
    internal const string LibraryName = "rils_capi";

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_abi_version")]
    internal static extern uint AbiVersion();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_runtime_create")]
    internal static extern ulong RuntimeCreate();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_runtime_destroy")]
    internal static extern int RuntimeDestroy(ulong runtime);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_runtime_set_max_steps")]
    internal static extern int RuntimeSetMaxSteps(ulong runtime, ulong max_steps);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_module_compile")]
    internal static extern int ModuleCompile(ulong runtime, NativeSlice source_name, NativeSlice source, out ulong out_module);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_module_compile_file")]
    internal static extern int ModuleCompileFile(ulong runtime, NativeSlice path, out ulong out_module);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_module_load_bytecode")]
    internal static extern int ModuleLoadBytecode(ulong runtime, NativeSlice bytecode, out ulong out_module);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_module_load_bytecode_file")]
    internal static extern int ModuleLoadBytecodeFile(ulong runtime, NativeSlice path, out ulong out_module);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_module_bytecode_size")]
    internal static extern int ModuleBytecodeSize(ulong runtime, ulong module, out UIntPtr out_size);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_module_write_bytecode")]
    internal static extern int ModuleWriteBytecode(ulong runtime, ulong module, byte* buffer, UIntPtr buffer_capacity, out UIntPtr out_written);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_module_write_bytecode_file")]
    internal static extern int ModuleWriteBytecodeFile(ulong runtime, ulong module, NativeSlice path);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_module_destroy")]
    internal static extern int ModuleDestroy(ulong runtime, ulong module);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_instance_create")]
    internal static extern int InstanceCreate(ulong runtime, ulong module, out ulong out_instance);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_instance_destroy")]
    internal static extern int InstanceDestroy(ulong runtime, ulong instance);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_instance_execute")]
    internal static extern int InstanceExecute(ulong runtime, ulong instance, out NativeValue out_value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_instance_call")]
    internal static extern int InstanceCall(ulong runtime, ulong instance, NativeSlice function_name, NativeValue* arguments, UIntPtr argument_count, out NativeValue out_value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_last_error_code")]
    internal static extern int LastErrorCode();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_last_error_message")]
    internal static extern NativeSlice LastErrorMessage();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_last_error_source_name")]
    internal static extern NativeSlice LastErrorSourceName();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_last_error_span_start")]
    internal static extern ulong LastErrorSpanStart();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_last_error_span_end")]
    internal static extern ulong LastErrorSpanEnd();
}
}
